updated media query

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
     <div class="btn-group btn-group-toggle button-on" data-toggle="buttons">
-     <butto class="on-button"><i class="fa fa-power-off" aria-hidden="true"></i></button>
+     <button class="on-button"><i class="fa fa-power-off" aria-hidden="true"></i></button>
     </div>
 
     <div class="off-div"></div>
